--- a/test/qunit/qunit.css
+++ b/test/qunit/qunit.css
@@ -74,6 +74,10 @@
 	list-style-position: inside;
 }
 
+#qunit-tests.hidepass li.pass {
+	display: none;
+}
+
 #qunit-tests li strong {
 	cursor: pointer;
 }
@@ -164,6 +168,13 @@
 	border-left: 26px solid #EE5757;
 }
 
+#qunit-tests > li:last-child {
+	border-radius: 0 0 15px 15px;
+	-moz-border-radius: 0 0 15px 15px;
+	-webkit-border-bottom-right-radius: 15px;
+	-webkit-border-bottom-left-radius: 15px;
+}
+
 #qunit-tests .fail                          { color: #000000; background-color: #EE5757; }
 #qunit-tests .fail .test-name,
 #qunit-tests .fail .module-name             { color: #000000; }
@@ -174,7 +185,7 @@
 #qunit-banner.qunit-fail                    { background-color: #EE5757; }
 
 
-/** Footer */
+/** Result */
 
 #qunit-testresult {
 	padding: 0.5em 0.5em 0.5em 2.5em;
@@ -182,10 +193,7 @@
 	color: #2b81af;
 	background-color: #D2E0E6;
 
-	border-radius: 0 0 15px 15px;
-	-moz-border-radius: 0 0 15px 15px;
-	-webkit-border-bottom-right-radius: 15px;
-	-webkit-border-bottom-left-radius: 15px;
+	border-bottom: 1px solid white;
 }
 
 /** Fixture */
