--- a/test/qunit/qunit.css
+++ b/test/qunit/qunit.css
@@ -1,9 +1,9 @@
 /**
- * QUnit - A JavaScript Unit Testing Framework
- * 
+ * QUnit v1.3.0pre - A JavaScript Unit Testing Framework
+ *
  * http://docs.jquery.com/QUnit
  *
- * Copyright (c) 2011 John Resig, Jörn Zaefferer
+ * Copyright (c) 2012 John Resig, Jörn Zaefferer
  * Dual licensed under the MIT (MIT-LICENSE.txt)
  * or GPL (GPL-LICENSE.txt) licenses.
  */
@@ -11,7 +11,7 @@
 /** Font Family and Sizes */
 
 #qunit-tests, #qunit-header, #qunit-banner, #qunit-testrunner-toolbar, #qunit-userAgent, #qunit-testresult {
-	font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
+	font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serif;
 }
 
 #qunit-testrunner-toolbar, #qunit-userAgent, #qunit-testresult, #qunit-tests li { font-size: small; }
@@ -37,7 +37,7 @@
 	font-size: 1.5em;
 	line-height: 1em;
 	font-weight: normal;
-	
+
 	border-radius: 15px 15px 0 0;
 	-moz-border-radius: 15px 15px 0 0;
 	-webkit-border-top-right-radius: 15px;
@@ -52,6 +52,10 @@
 #qunit-header a:hover,
 #qunit-header a:focus {
 	color: #fff;
+}
+
+#qunit-header label {
+	display: inline-block;
 }
 
 #qunit-banner {
@@ -105,13 +109,13 @@
 #qunit-tests ol {
 	margin-top: 0.5em;
 	padding: 0.5em;
-	
+
 	background-color: #fff;
-	
+
 	border-radius: 15px;
 	-moz-border-radius: 15px;
 	-webkit-border-radius: 15px;
-	
+
 	box-shadow: inset 0px 2px 13px #999;
 	-moz-box-shadow: inset 0px 2px 13px #999;
 	-webkit-box-shadow: inset 0px 2px 13px #999;
@@ -174,7 +178,7 @@
 
 #qunit-tests .pass                          { color: #528CE0; background-color: #D2E0E6; }
 #qunit-tests .pass .test-name               { color: #366097; }
- 
+
 #qunit-tests .pass .test-actual,
 #qunit-tests .pass .test-expected           { color: #999999; }
 
@@ -186,6 +190,7 @@
 	color: #710909;
 	background-color: #fff;
 	border-left: 26px solid #EE5757;
+	white-space: pre;
 }
 
 #qunit-tests > li:last-child {
@@ -222,4 +227,6 @@
 	position: absolute;
 	top: -10000px;
 	left: -10000px;
+	width: 1000px;
+	height: 1000px;
 }
