--- a/test/qunit/qunit.css
+++ b/test/qunit/qunit.css
@@ -1,5 +1,5 @@
 /**
- * QUnit v1.3.0pre - A JavaScript Unit Testing Framework
+ * QUnit v1.5.0 - A JavaScript Unit Testing Framework
  *
  * http://docs.jquery.com/QUnit
  *
@@ -219,6 +219,9 @@
 	background-color: #D2E0E6;
 
 	border-bottom: 1px solid white;
+}
+#qunit-testresult .module-name {
+	font-weight: bold;
 }
 
 /** Fixture */
