--- a/demo/css/cmxformTemplate.css
+++ b/demo/css/cmxformTemplate.css
@@ -7,7 +7,7 @@ form.cmxform fieldset {
 	margin-bottom: 10px;
 }
 
-form.cmxform legend {
+form.cmxform legend, form.cmxform .box .title {
 	padding: 0 2px;
 	font-weight: bold;
 	_margin: 0 -7px; /* IE Win */
@@ -20,29 +20,35 @@ form.cmxform label {
 	cursor: hand;
 }
 
-form.cmxform fieldset p {
+form.cmxform fieldset p,
+form.cmxform .box p {
 	list-style: none;
 	padding: 5px;
 	margin: 0;
 }
 
-form.cmxform fieldset fieldset {
+form.cmxform fieldset fieldset,
+form.cmxform .box fieldset {
 	border: none;
 	margin: 3px 0 0;
 }
 
-form.cmxform fieldset fieldset legend {
+form.cmxform fieldset fieldset legend, form.cmxform .box fieldset legend {
 	padding: 0 0 5px;
 	font-weight: normal;
 }
 
-form.cmxform fieldset fieldset label {
-	display: block;
-	width: auto;
-}
 
 form.cmxform label { width: 100px; } /* Width of labels */
-form.cmxform fieldset fieldset label { margin-left: 103px; } /* Width plus 3 (html space) */
+form.cmxform fieldset fieldset label,
+form.cmxform .box fieldset label {
+	display: block;
+	width: auto;
+	/* Width plus 3 (html space) */
+	margin-left: 103px;
+}
+
+
 form.cmxform label.error {
 	margin-left: 103px;
 	width: 220px;
